force-app/main/default/objects/AvatarResultMapping__c/AvatarResultMapping__c.object-meta.xml
<CustomObject>
    <label>Avatar Result Mapping</label>
    <nameField>
        <displayFormat>ARM-{0000000000}</displayFormat>
        <label>Avatar Result Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Avatar Result Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>