force-app/main/default/objects/AvatarResultMapping__c/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Answer</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>