force-app/main/default/objects/AvatarResultMapping__c/fields/Avatar__c.field-meta.xml
<CustomField>
    <fullName>Avatar__c</fullName>
    <description>Show Avatar EN</description>
    <formula>AvatarMaster__r.Avatar_EN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avatar</label>
    <type>Text</type>
</CustomField>