force-app/main/default/objects/AvatarResultMapping__c/fields/AvatarMaster__c.field-meta.xml
<CustomField>
    <fullName>AvatarMaster__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Avatar Master</label>
    <referenceTo>Avatar_Master__c</referenceTo>
    <relationshipName>Avatar_Mapping_Results</relationshipName>
    <type>Lookup</type>
</CustomField>