force-app/main/default/objects/AvatarResultMapping__c/fields/FlowResults__c.field-meta.xml
<CustomField>
    <fullName>FlowResults__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Flow Results</label>
    <length>255</length>
    <type>Text</type>
</CustomField>