force-app/main/default/objects/AvatarResultMapping__c/fields/QuestionnaireFlow__c.field-meta.xml
<CustomField>
    <fullName>QuestionnaireFlow__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Questionnaire Flow</label>
    <length>255</length>
    <type>Text</type>
</CustomField>