force-app/main/default/objects/AvatarResultMapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Segment__c</columns>
    <columns>Avatar__c</columns>
    <columns>QuestionnaireFlow__c</columns>
    <columns>Answer__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>